--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -85,10 +85,13 @@ endpoints:
 
 ---
 hibernate:
+    format_sql : true
     cache:
         queries: false
         use_second_level_cache: false
         use_query_cache: false
+
+
 dataSource:
     pooled: true
     jmxExport: true
@@ -103,6 +106,7 @@ environments:
             url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     test:
         dataSource:
+            logSql: true
             dbCreate: update
             url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     production:
