--- a/build.gradle
+++ b/build.gradle
@@ -46,8 +46,11 @@ dependencies {
     compile "org.grails.plugins:scaffolding"
     compile "org.grails.plugins:events"
     compile "org.grails.plugins:hibernate5"
-    compile "org.hibernate:hibernate-core:5.1.16.Final"
+    compile "org.hibernate:hibernate-core:5.1.5.Final"
+    compile group: 'org.hibernate', name: 'hibernate-java8', version: '5.1.5.Final'
     compile "org.grails.plugins:gsp"
+    compile 'org.grails.plugins:grails-java8:1.2.3'  //java 8 features including datetime in GSP
+    compile 'org.grails.plugins:fields:2.2.10'
     console "org.grails:grails-console"
     profile "org.grails.profiles:web"
     runtime "org.glassfish.web:el-impl:2.1.2-b03"
@@ -59,6 +62,7 @@ dependencies {
     testCompile "org.grails:grails-web-testing-support"
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
+
     //testCompile group: 'org.spockframework', name: 'spock-core', version: '1.2-groovy-2.5'
 
     //add Logback
