--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -101,6 +101,10 @@ dataSource:
 
 environments:
     development:
+        grails:
+            plugin:
+                fields:
+                    disableLookupCache: true
         dataSource:
             dbCreate: create-drop
             url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
