--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     compile "org.grails.plugins:gsp"
     compile 'org.grails.plugins:grails-java8:1.2.3'  //java 8 features including datetime in GSP
     compile 'org.grails.plugins:fields:2.2.10'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+
     console "org.grails:grails-console"
     profile "org.grails.profiles:web"
     runtime "org.glassfish.web:el-impl:2.1.2-b03"
