problems setting up with mysql v8
dropped back to using just H2 in mem for now

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -85,6 +85,7 @@ endpoints:
 
 ---
 hibernate:
+    #dialect: #org.hibernate.dialect.MySQL5InnoDBDialect  #org.hibernate.dialect.MySQL8Dialect
     format_sql : true
     cache:
         queries: false
@@ -92,12 +93,21 @@ hibernate:
         use_query_cache: false
 
 
+#dataSource:
+#    pooled: true
+#    jmxExport: true
+#    driverClassName: com.mysql.jdbc.Driver  //v8 com.mysql.cj.jdbc.Driver
+#    username: root
+#    password: Belgareth1xex49is
+
+#dataSources:
+#   H2:
 dataSource:
-    pooled: true
-    jmxExport: true
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
+        pooled: true
+        jmxExport: true
+        driverClassName: org.h2.Driver
+        username: sa
+        password: ''
 
 environments:
     development:
@@ -106,17 +116,32 @@ environments:
                 fields:
                     disableLookupCache: true
         dataSource:
+            #username: root
+            #password: Belgareth1xex49is
+
             dbCreate: create-drop
+            #logSql: true
+            #formatSql: true
             url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            #url: jdbc:mysql://localhost:3306/lcm?autoReconnect=true&useUnicode=yes&characterEncoding=UTF-8&useSSL=false //&allowPublicKeyRetrieval=true
+            #driverClassName: com.mysql.cj.jdbc.Driver
+
     test:
         dataSource:
+            username: root
+            password: Belgareth1xex49is
+
             #logSql: true
             dbCreate: update
             url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            #url: jdbc:mysql://localhost:3306/lcm?autoReconnect=true&useUnicode=yes&characterEncoding=UTF-8&useSSL=false  //&allowPublicKeyRetrieval=true
+
     production:
         dataSource:
             dbCreate: none
             url: jdbc:h2:./prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+
+            #url: jdbc:mysql://localhost:3306/lcm?autoReconnect=true&useUnicode=yes&characterEncoding=UTF-8&useSSL=false
             properties:
                 jmxEnabled: true
                 initialSize: 5
