--- a/build.gradle
+++ b/build.gradle
@@ -46,12 +46,20 @@ dependencies {
     compile "org.grails.plugins:scaffolding"
     compile "org.grails.plugins:events"
     compile "org.grails.plugins:hibernate5"
-    compile "org.hibernate:hibernate-core:5.1.5.Final"
+    compile "org.hibernate:hibernate-core:5.1.5.Final" //5.4.1.Final  5.1.5.Final  //suports mysql8 dialect
     compile group: 'org.hibernate', name: 'hibernate-java8', version: '5.1.5.Final'
+/*    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.4.1.Final'
+    compile group: 'org.hibernate', name: 'hibernate-validator', version: '5.4.1.Final'
+    compile group: 'org.hibernate', name: 'hibernate-jpamodelgen', version: '5.4.1.Final'
+    compile group: 'org.hibernate', name: 'hibernate-envers', version: '5.4.1.Final'
+    compile group: 'org.hibernate', name: 'hibernate-ehcache', version: '5.4.1.Final'
+    compile group: 'org.hibernate', name: 'hibernate-validator-annotation-processor', version: '5.4.1.Final'
+    */
     compile "org.grails.plugins:gsp"
     compile 'org.grails.plugins:grails-java8:1.2.3'  //java 8 features including datetime in GSP
     compile 'org.grails.plugins:fields:2.2.10'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.5'  //8.0.15
 
     console "org.grails:grails-console"
     profile "org.grails.profiles:web"
@@ -69,13 +77,9 @@ dependencies {
 
     //add Logback
     compile 'ch.qos.logback:logback-classic:1.2.3'
-    compile 'ch.qos.logback:logback-core:1.2.3'
+//    compile 'ch.qos.logback:logback-core:1.2.3'
     compile 'org.slf4j:slf4j-api:1.7.25'
 
-    //need these to get json api working with LocalDateTime etc
-    compile 'org.grails.plugins:grails-java8:1.2.3'
-    compile group: 'org.hibernate', name: 'hibernate-java8', version: '5.4.0.Final'
-    
     compile "org.grails.plugins:views-json:1.2.10"
     //compile "com.softwood:utils:1.0-SNAPSHOT"  //include my json utils
 
