finally fixed clipping problem - .propertyList line 215 in main .css!

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -29,6 +29,9 @@ endpoints:
 
 ---
 grails:
+    server:
+        port:
+            http: 8090
     mime:
         disable:
             accept:
@@ -128,8 +131,8 @@ environments:
 
     test:
         dataSource:
-            username: root
-            password: Belgareth1xex49is
+            username: sa
+            password: ''
 
             #logSql: true
             dbCreate: update
