had to drop back to java 1.8 and gradle 4.10 to get a build and able to run app

--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,9 @@ dependencies {
     compile "org.grails.plugins:views-json:1.2.10"
     //compile "com.softwood:utils:1.0-SNAPSHOT"  //include my json utils
 
+    compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.15'  //, ext: 'pom'
+
+
 }
 
 bootRun {
